--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# --- From GitHub's default CMake .gitignore ---
 CMakeLists.txt.user
 CMakeCache.txt
 CMakeFiles
@@ -11,9 +12,46 @@ CTestTestfile.cmake
 _deps
 CMakeUserPresets.json
 
-# CLion
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#cmake-build-*
+# --- From libShapeDescriptor's .gitignore ---
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+
+lib/*
+build/*
+.idea/*
+cmake-build-debug/*
+cmake-build-debug_/*
+cmake-build-release/*
+build-windows/*
+
+.vscode
