Add a basic kernel that reads some sampled point cloud points

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,14 @@
 set(CMAKE_CXX_STANDARD 17)
 
 cmake_minimum_required(VERSION 3.5)
-project(test_gpu LANGUAGES CXX CUDA)
+project(naive_gpu LANGUAGES CXX CUDA)
 
-add_definitions ( -DspinImageWidthPixels=96 )
+add_definitions(-DspinImageWidthPixels=96)
 add_subdirectory(lib/libShapeDescriptor libShapeDescriptor)
 
 enable_language(CUDA)
 
-find_package(CUDA REQUIRED)
+# find_package(CUDA REQUIRED)
 find_package(OpenMP)
 if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
     # In case of omp.h missing, run brew install libomp
@@ -21,12 +21,22 @@ include_directories (
         src/
         ${OPENMP_INCLUDE_DIRS}
         ${CUDA_INCLUDE_DIRS}
-        $(CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES)
+        ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES}
 )
 
-file (GLOB_RECURSE LIBRARY_HEADERS             ./*.h)
-file (GLOB_RECURSE LIBRARY_SOURCES             main.cpp)
+# set(COMMON_HEADERS
+#     ${PROJECT_SOURCE_DIR}/src/some_common_header.h  # optional, replace or remove
+# )
 
-add_executable(${PROJECT_NAME} ${LIBRARY_SOURCES} ${LIBRARY_HEADERS})
-target_link_libraries(${PROJECT_NAME} ShapeDescriptor fast-lzma2 OpenMP::OpenMP_CXX)
-set_property(TARGET ${PROJECT_NAME} PROPERTY CUDA_ARCHITECTURES native)
+# file (GLOB_RECURSE LIBRARY_HEADERS             src/*.h)
+# file (GLOB_RECURSE LIBRARY_SOURCES             src/main.cpp)
+
+# naive_gpu executable
+add_executable(naive_gpu src/naive_gpu.cu ${LIBRARY_HEADERS})
+target_link_libraries(naive_gpu ShapeDescriptor fast-lzma2 OpenMP::OpenMP_CXX)
+set_property(TARGET naive_gpu PROPERTY CUDA_ARCHITECTURES native)
+
+# test_gpu executable
+add_executable(test_gpu src/test_gpu.cpp ${LIBRARY_HEADERS})
+target_link_libraries(test_gpu ShapeDescriptor fast-lzma2 OpenMP::OpenMP_CXX)
+set_property(TARGET test_gpu PROPERTY CUDA_ARCHITECTURES native)
